# CUDA-CenterPoint-Custom

./: CMakeLists.txt  README.md  main.cpp  result_show_2d.py  result_show_3d.py
centerpoint-export/: funcs.py
data/pkl/: nusc_gt_out_fp32.pkl
model/: rpn_centerhead_sim.plan
src/: centerpoint.cpp  common.h  preprocess.cpp
tool/: build.trt.sh  export_neck_head.py  export_neck_head_onnx_show.py
